<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google"/>

            <TextView
                android:layout_width="wrap_content"
                style="@style/TextContent.Small.White"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="#4D000000"
                android:drawableLeft="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dummy_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextContent.Black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/price_values"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            style="@style/TextContent.Subtitle"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/stock_values"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            style="@style/TextContent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Specification"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextSpec.Field"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/display"/>

                <TextView
                    android:layout_width="match_parent"
                    style="@style/TextSpec.Value"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_display"
                    android:textColor="@android:color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextSpec.Field"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/size"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    style="@style/TextSpec.Value"
                    android:layout_weight="1"
                    android:text="@string/content_specs_size"
                    android:textColor="@android:color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextSpec.Field"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/battery"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_battery"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            style="@style/TextContent.Subtitle"
            android:layout_height="wrap_content"
            android:text="@string/sell_by"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/photo_2"
                android:layout_centerVertical="true"
                android:id="@+id/profile_img"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                style="@style/TextContent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_img"
                android:layout_toRightOf="@+id/profile_img"
                android:text="@string/profile_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            style="@style/ButtonGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>
</ScrollView>